Sync ith the original 0034

--- a/src/routes/community/groups/index.mdx
+++ b/src/routes/community/groups/index.mdx
@@ -32,7 +32,9 @@ et répandez votre amour pour l'innovation !
 
 ### Newsletters
 
-- <GroupLink link="https://qwiknewsletter.com">Newsletter Qwikly - Nouvelles hebdomadaires sur Qwik</GroupLink>
+- <GroupLink link="https://qwiknewsletter.com">
+    Newsletter Qwikly - Nouvelles hebdomadaires sur Qwik
+  </GroupLink>
 
 ### Communautés globales
 
@@ -60,4 +62,5 @@ et répandez votre amour pour l'innovation !
 
 #### Royaume-Uni
 
-- <MeetupLogo /><GroupLink link="https://www.meetup.com/qwik-london/">Groupe Meetup de Qwik Londres</GroupLink>
+- <MeetupLogo />
+  <GroupLink link="https://www.meetup.com/qwik-london/">Groupe Meetup de Qwik Londres</GroupLink>
