--- a/src/routes/docs/getting-started/index.mdx
+++ b/src/routes/docs/getting-started/index.mdx
@@ -15,7 +15,7 @@ Qwik est un nouveau type de framework qui est [résumable](../concepts/resumable
 
 ## Prérequis
 
-- [Node.js v16](https://nodejs.org/en/download/) ou supérieur
+- [Node.js v16.8](https://nodejs.org/en/download/) ou supérieur
 - Votre IDE préféré ([vscode](https://code.visualstudio.com/) est recommandé)
 - Commencez par lire [Pensez Qwik](../think-qwik/index.mdx)
 
@@ -30,7 +30,7 @@ Choisissez le gestionnaire de paquets que vous préférez et exécutez la comman
 ```shell
 npm create qwik@latest
 pnpm create qwik@latest
-yarn create qwik@latest
+yarn create qwik
 ```
 
 Le CLI vous guidera à travers un menu interactif pour définir le nom du projet, sélectionner l'un des _starters_ et vous demandera si vous voulez installer les dépendances.
