--- a/src/routes/qwikcity/routing/index.mdx
+++ b/src/routes/qwikcity/routing/index.mdx
@@ -68,7 +68,18 @@ src/
             └── index.tsx     # https://example.com/user/foo
 ```
 
-> Le dossier `[skuId]` peut être n'importe lequel des milliers de produits que vous avez dans votre base de données. Il serait peu pratique de créer une route pour chaque produit. Au lieu de cela, nous devons définir un paramètre de route (une partie de l'URL) qui sera utilisé pour extraire le `[skuId]`.
+> Le dossier `[username]` peut être n'importe lequel des milliers d'utilisateurs que vous avez dans votre base de données. Il serait peu pratique de créer une route pour chaque utilisateur. Au lieu de cela, nous devons définir un paramètre de route (une partie de l'URL) qui sera utilisé pour extraire le `[username]`.
+
+```tsx
+// src/routes/user/[username]/index.tsx
+import { component$ } from '@builder.io/qwik';
+import { useLocation } from '@builder.io/qwik-city';
+
+export default component$(() => {
+  const loc = useLocation();
+  return <div>Hello {loc.params.username}!</div>
+});
+```
 
 ## Fichiers `index.`
 
