--- a/src/routes/integrations/deployments/cloudflare-pages/index.mdx
+++ b/src/routes/integrations/deployments/cloudflare-pages/index.mdx
@@ -117,8 +117,8 @@ export const onRequest = async ({ platform }) => {
 De plus, vous pouvez importer les types `RequestHandler` et `PlatformCloudflarePages` pour avoir des compléments de type dans votre éditeur.
 
 ```tsx
-import { type RequestHandler } from "@builder.io/qwik-city";
-import { type PlatformCloudflarePages } from "@builder.io/qwik-city/middleware/cloudflare-pages";
+import { type RequestHandler } from '@builder.io/qwik-city';
+import { type PlatformCloudflarePages } from '@builder.io/qwik-city/middleware/cloudflare-pages';
 
 export const onGet: RequestHandler<PlatformCloudflarePages> = ({ platform }) => {
   //...
