Translate in french 0017

--- a/src/routes/docs/overview/index.mdx
+++ b/src/routes/docs/overview/index.mdx
@@ -51,17 +51,10 @@ Qwik est un nouveau type de framework web qui peut fournir des applications web 
   </div>
   <div class="card">
     <h3>Instantané</h3>
-    <p>
-      Contrairement aux autres frameworks, Qwik est résumable, ce qui signifie que les applications Qwik ne nécessitent aucune hydratation.
-      Cela permet aux applis Qwik d'avoir une interactivité instantanée, quelles que soient leurs tailles ou leurs complexités.
-    </p>
+    <p>Contrairement aux autres frameworks, Qwik est résumable, ce qui signifie que les applications Qwik ne nécessitent aucune hydratation. Cela permet aux applis Qwik d'avoir une interactivité instantanée, quelles que soient leurs tailles ou leurs complexités.</p>
   </div>
   <div class="card">
     <h3>Optimisé pour la vitesse</h3>
-    <p>
-      Qwik a une performance sans précédent, offrant des chargements de pages complètes en moins d'une seconde même sur les appareils
-      mobiles. Qwik atteint ce résultat en fournissant du HTML pur, et en chargeant du JS de façon incrémentale, seulement quand
-      c'est nécessaire.
-    </p>
+    <p>Qwik a une performance sans précédent, offrant des chargements de pages complètes en moins d'une seconde même sur les appareils mobiles. Qwik atteint ce résultat en fournissant du HTML pur, et en chargeant du JS de façon incrémentale, seulement quand c'est nécessaire.</p>
   </div>
 </div>
