--- a/src/routes/integrations/integration/postcss/index.mdx
+++ b/src/routes/integrations/integration/postcss/index.mdx
@@ -8,19 +8,19 @@ contributors:
 
 # PostCSS
 
-PostCSS allows developers to write modern CSS while still maintaining backwards compatibility and improving performance. It parses CSS code and passes it through a series of plugins that can modify, optimize, and extend the CSS before outputting the final result. [PostCSS Website](https://postcss.org/)
+PostCSS permet aux développeurs d'écrire du CSS moderne tout en conservant une compatibilité ascendante et en améliorant les performances. Il analyse le code CSS et le fait passer par une série de plugins qui peuvent modifier, optimiser et étendre le CSS avant de produire le résultat final. [Site Web de PostCSS](https://postcss.org/)
 
-## Usage
+## Utilisation
 
-You can add PostCSS to your project by using the following Qwik starter script:
+Vous pouvez ajouter PostCSS à votre projet en utilisant le script de starter Qwik suivant :
 
 ```shell
 npm run qwik add postcss
 ```
 
-The previous command updates your app and sets the correct configuration in `vite.config.ts`.
+La commande précédente met à jour votre application et définit la configuration correcte dans `vite.config.ts`.
 
-It also adds a new file in your `src` folder.
+Elle ajoute également un nouveau fichier dans votre dossier `src`.
 
 - `postcss.config.js`
 
